# finances-api

./: .dockerignore  CLAUDE.md  CODE_EXAMPLES.md  Dockerfile  HOLDINGS_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOGGING_QUICK_REFERENCE.md  MIGRATION_NOTES.md  Makefile  README.md  TASK6_INDEX.md  TRANSACTION_IMPLEMENTATION_SUMMARY.md  alembic.ini  docker-compose.yml  healthcheck.py  pyproject.toml  test_dns.py
.claude/: CLAUDE.md
alembic/: env.py
alembic/versions/: 2025_11_10_0340-1926e316116c_initial_migration_with_users_securities_.py  2025_11_10_0342_add_securities_and_security_prices_tables.py  2025_11_10_0721-5d03850a6e53_add_financial_institutions_accounts_and_.py  2025_11_10_0847-f81d6c130a3b_add_currency_and_currency_rate_models.py  2025_11_11_0438-dd5b4d3198d5_refactor_currency_model_to_use_code_as_.py
docs/: API.md  ARCHITECTURE.md  LOGGING.md  TRANSACTION_MANAGEMENT.md
src/: main.py
src/app/core/: cache.py  config.py  constants.py  deps.py  exceptions.py  middleware.py  rate_limit.py  security.py
src/app/data/: __init__.py  market_tickers.py
src/app/db/: base.py  session.py
src/app/models/: __init__.py  account.py  account_value.py  (+7 more)
tests/: conftest.py
tests/core/: test_cache.py  test_deps.py
tests/db/: test_transactions.py
tests/repositories/: test_account_repository.py  test_account_value_repository.py  test_holding_repository.py  test_pydantic_validation.py  test_user_repository.py
tests/services/: test_currency_service.py  test_exchange_service.py  test_security_service.py  test_user_service.py
tests/utils/: test_security.py
(+44 files in other folders)
